# MI.ShamirProtocol

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  format.sh
src/Base/: MI.fast_mod.h  MI.fast_mod_unittest.cpp
